--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,6 +3,8 @@
         <title>Hello World App</title>
     </head>
     <body>
-        this is a hello world app
+            <div id="app"></div>
+            <script src="https://npmcdn.com/react@15.3.1/dist/react.js"></script>
+            <script src="https://npmcdn.com/react-dom@15.3.1/dist/react-dom.js"></script>
     </body>
 </html>
